--- a/src/main/webapp/html/user/administratorlist.html
+++ b/src/main/webapp/html/user/administratorlist.html
@@ -18,9 +18,9 @@
             <div class="panel-body">
                 <form id="formSearch" class="form-horizontal">
                     <div class="form-group" style="margin-top:15px">
-                        <label class="control-label col-sm-1" for="txt_search_departmentname">部门名称</label>
+                        <label class="control-label col-sm-1" for="txt_search_departmentname">用户名称</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="departmentName">
+                            <input type="text" class="form-control" id="username">
                         </div>
                         <div class="col-sm-4" style="text-align:left;">
                             <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary">查询</button>
@@ -30,33 +30,49 @@
             </div>
         </div>       
 
-        <div id="toolbar" class="btn-group">
+        <!--<div id="toolbar" class="btn-group">
             <button id="btn_add" type="button" class="btn btn-default">
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
             </button>
-        </div>
+        </div>-->
         <table id="massage"></table>
     </div>
 	<!-- 查看显示的model -->
-		<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel">
+		<div class="modal fade" id="myModa-add" tabindex="-1" aria-labelledby="myModalLabel">
 		<div class="modal-dialog dialog-width-800" role="document">
 			<div class="modal-content">
 			    <div class="modal-header">
 			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">x</span></button>
-			    	<h4 class="modal-title" id="myModalLabel1">部门名称</h4>
+			    	<h4 class="modal-title" id="myModalLabel1">管理员详情</h4>
 				</div>
 				<div class="modal-body dialog-body">
 					<div class="form-group dialog-50">
-			    		<label for="txt_departmentname" class="dialog-label-20" >部门名称：</label>
-			    		<div class="dialog-div-75">
-			    			<font id="proPacTypeName"></font>
-			    		</div>
+			    		<label for="txt_departmentname" class="dialog-label-20" >账号：</label>		 
+			    			<font id="user"></font>
+			    	</div>
+			    	<div class="form-group dialog-100">
+			    		<label for="txt_departmentname" class="dialog-label-10" >姓名：</label>
+			    			<font id="nameUser"></font>
+			    	</div>
+			    	<div class="form-group dialog-50">
+			    		<label for="txt_departmentname" class="dialog-label-20" >性别：</label>
+			    			<font id="sex"></font>
 			    	</div>
 					<div class="form-group dialog-50">
-			    		<label for="txt_departmentname" class="dialog-label-20" >创建时间：</label>
-			    		<div class="dialog-div-75">
+			    		<label for="txt_departmentname" class="dialog-label-20" >部门：</label>
+			    			<font id="departname"></font>
+			    	</div>
+					<div class="form-group dialog-100">
+			    		<label for="txt_departmentname" class="dialog-label-10" >联系方式：</label>
+			    			<font id="telephonenumber"></font>
+			    	</div>
+			    	<div class="form-group dialog-100">
+			    		<label for="txt_departmentname" class="dialog-label-10" >创建时间：</label>
 			    			<font id="createTime"></font>
-			    		</div>
+			    	</div>
+			    	<div class="form-group dialog-100">
+			    		<label for="txt_departmentname" class="dialog-label-10" >修改时间：</label>
+			    			<font id="updateTime"></font>
 			    	</div>
 				</div>
 			    <div class="modal-footer">
@@ -103,6 +119,6 @@
 	<script type="text/javascript" src="../../assest/bootstrap/qiao.js"></script>
 	<script type="text/javascript" src="../../js/util/main.js"></script>
 	<script type="text/javascript" src="../../js/util/handlebars-v4.0.5.js"></script>
-	<script type="text/javascript" src="../../js/development/development_list.js"></script>
+	<script type="text/javascript" src="../../js/user/administratorlist.js"></script>
 </body>
 </html>
