--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -58,7 +58,7 @@
                                 <a class="J_menuItem" href="userlist.html">用户列表</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="admin_list.html">管理员列表</a>
+                                <a class="J_menuItem" href="administratorlist.html">管理员列表</a>
                             </li>
                         </ul>
                     </li>
