--- a/src/main/webapp/html/user/login.html
+++ b/src/main/webapp/html/user/login.html
@@ -34,7 +34,7 @@
             <h3>欢迎使用网上培训平台</h3>
 
             <!-- <form class="m-t" role="form" action="index.html"> -->
-                <div class="form-group">
+             <!--  <div class="form-group">
                     <input type="text" name="username" id="username" class="form-control" placeholder="账号" required="">
                 </div>
                 <div class="form-group"> 
@@ -45,20 +45,69 @@
 
                 <p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a>
                 </p>
-                <div id="error_box"><br></div>
+                <div id="error_box"><br></div>-->
            <!--  </form> -->
+           <form id="loginForm" name="loginForm" >
+						<div class="input-prepend form-group">
+							<span class="add-on"><i class="halflings-icon user"></i></span>
+							<input class="input-large span10 form-control" name="username" id="username" type="text" placeholder="请输入手机号" maxlength="12"/>
+						</div>
+						<div class="clearfix"></div>
+						<div class="input-prepend form-group">
+							<span class="add-on"><i class="halflings-icon lock"></i></span>
+							<input class="input-large span10 form-control" name="password" id="password" type="password" placeholder="请输入密码" maxlength="20"/>
+						</div>
+						<div class="clearfix"></div>
+						<div class="button-login form-group">	
+							<button type="submit" class="btn btn-primary">登录</button>
+						</div>
+						<div class="clearfix"></div>
+			</form>
+			<p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a>
+                </p>
         </div>
     </div>
 
     <!-- 全局js -->
-    <script src="../../assest/js/jquery.js"></script>
+   <!--<script src="../../assest/js/jquery.js"></script>
 
-    
-    
+    <script src="../../assest/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../assest/bootstrap/qiao.js"></script>
+    <script src="../../assest/bootstrap/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="../../assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="../../js/util/main.js"></script>
 	<script type="text/javascript" src="../../js/util/handlebars-v4.0.5.js"></script>
-    <script type="text/javascript" src="../../js/user/login.js"></script>
+    <script type="text/javascript" src="../../js/user/login.js"></script>-->
+    <script src="../../assest/js/jquery.js"></script>
+	<script src="../../assest/js/jquery-ui-1.10.0.custom.min.js"></script>
+	<script src="../../assest/js/jquery.ui.touch-punch.js"></script>
+	<script src="../../assest/js/modernizr.js"></script>
+	<script src="../../assest/js/bootstrap.min.js"></script>
+	<script src="../../assest//bootstrap/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+	<script src="../../assest/js/jquery.cookie.js"></script>
+	<script src='../../assest/js/fullcalendar.min.js'></script>
+	<script src='../../assest/js/jquery.dataTables.min.js'></script>
+	<script src="../../assest/js/excanvas.js"></script>
+	<script src="../../assest/js/jquery.flot.js"></script>
+	<script src="../../assest/js/jquery.flot.pie.js"></script>
+	<script src="../../assest/js/jquery.flot.stack.js"></script>
+	<script src="../../assest/js/jquery.flot.resize.min.js"></script>
+	<script src="../../assest/js/jquery.chosen.min.js"></script>
+	<script src="../../assest/js/jquery.noty.js"></script>
+	<script src="../../assest/js/jquery.raty.min.js"></script>
+	<script src="../../assest/js/jquery.iphone.toggle.js"></script>
+	<script src="../../assest/js/jquery.uploadify-3.1.min.js"></script>
+	<script src="../../assest/js/jquery.gritter.min.js"></script>
+	<script src="../../assest/js/jquery.imagesloaded.js"></script>
+	<script src="../../assest/js/jquery.masonry.min.js"></script>
+	<script src="../../assest/js/jquery.knob.modified.js"></script>
+	<script src="../../assest/js/jquery.sparkline.min.js"></script>
+	<script src="../../assest/js/counter.js"></script>
+	<script src="../../assest/js/retina.js"></script>
+	
+	<script type="text/javascript" src="../../assest/bootstrap/qiao.js"></script>
+	<script type="text/javascript" src="../../js/util/main.js"></script>
+	<script type="text/javascript" src="../../js/user/login.js"></script>
 
 
 </body>
