--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -76,10 +76,10 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">账号管理</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="contacts.html">个人设置</a>
+                        <ul class="nav nav-second-level" id="userManagement">
+                            <li><a class="J_menuItem" id="personal" href="userInfoUpdate.html">个人设置</a>
                             </li>
-                            <li><a class="J_menuItem" href="profile.html">安全设置</a>
+                            <li><a class="J_menuItem" id="secure" href="userInfoUpdate.html">安全设置</a>
                             </li>
                         </ul>
                     </li>
