提交视频上传

--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -68,7 +68,7 @@
                     <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">培训资源</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="form_basic.html">创建课程</a>
+                            <li><a class="J_menuItem" href="../course/course_add.html">创建课程</a>
                             </li>
                             <li><a class="J_menuItem" href="form_validate.html">课程管理</a>
                             </li>
