--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -79,7 +79,7 @@
                         <ul class="nav nav-second-level" id="userManagement">
                             <li><a class="J_menuItem" id="personal" href="userInfoUpdate.html">个人设置</a>
                             </li>
-                            <li><a class="J_menuItem" id="secure" href="userInfoUpdate.html">安全设置</a>
+                            <li><a class="J_menuItem" id="secure" href="updateUserPassword.html">安全设置</a>
                             </li>
                         </ul>
                     </li>
@@ -97,7 +97,7 @@
                         <span class="ng-scope">操作</span>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="login.html"><i class="fa fa-cutlery"></i> <span class="nav-label">退出系统</span></a>
+                        <a class="J_menuItem"><i class="fa fa-cutlery"></i> <span class="nav-label" onclick="quit()">退出系统</span></a>
                     </li>
                 </ul>
             </div>
