--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -88,7 +88,7 @@
                         <ul class="nav nav-second-level">
                             <li><a class="J_menuItem" href="toastr_notifications.html">已完成课程</a>
                             </li>
-                            <li><a class="J_menuItem" href="diff.html">未完成课程</a>
+                            <li><a class="J_menuItem" href="../course/coursePlay.html">未完成课程</a>
                             </li>
                         </ul>
                     </li>
