--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -70,7 +70,7 @@
                         <ul class="nav nav-second-level">
                             <li><a class="J_menuItem" href="../course/course_add.html">创建课程</a>
                             </li>
-                            <li><a class="J_menuItem" href="form_validate.html">课程管理</a>
+                            <li><a class="J_menuItem" href="../course/courseManage.html">课程管理</a>
                             </li>
                         </ul>
                     </li>
