--- a/src/main/webapp/html/course/test.html
+++ b/src/main/webapp/html/course/test.html
@@ -25,33 +25,39 @@
 	
 	
 <meta charset="UTF-8">
-<title>上传视频结果</title>
+<title>考试</title>
 </head>
-<body>
+<body onunload="goodbye()">
+	<div id="CountMsg" class="HotDate"> 
+	<span>距考试结束还有：</span> 
+	<span id="t_h">00时</span> 
+	<span id="t_m">00分</span> 
+	<span id="t_s">00秒</span> 
+    </div>
+    <div id="courseName"></div> 
+    <div id="testList"></div>
     <div class="form-actions form-group">
-				<div id="courseName"><i class="halflings-icon edit"></i><span class="break"></span></div>
+	<button type="submit" id="saveMenu" class="btn btn-primary">提交试卷</button>
 	</div>
-	<!--<video id="video" width="320" height="240" controls="controls" autoplay="autoplay">播放失败</video>-->
-	<div>
 	<br/>
 	<br/>
-	<video id="video-active" class="video-active" width="100%" height="600" controls="controls" autoplay="autoplay">
-	</video>
-	<div id="introduce"></div>
-	</div>
-	<!--<div id="current">当前时长：0:00</div>
-	<div id="duration">总时长：0:00</div>
-	<span id="pro"></span>
-	<div class="progress progress-striped active" style="width:100">
-	<span id="hyTime" class="progress-bar progress-bar-success"  role="progressbar"  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"       >
-	</span>
-	</div> <span id="hy" ></span>
+	<br/>
+	<br/>
+	<br/>
+	<script id="testId" type="text/x-handlebars-template"> 
+    {{#each rows}}
+     <ol>
+         <hr id="{{id}}">{{number}}、{{include}}</hr><br/>
+        <input type="radio" name="{{id}}" value="{{option1}}"> A: {{option1}}</input><br/>
+        <input type="radio" name="{{id}}" value="{{option2}}"> B: {{option2}}</input><br/>
+        <input type="radio" name="{{id}}" value="{{option3}}"> C: {{option3}}</input><br/>
+        <input type="radio" name="{{id}}" value="{{option4}}"> D: {{option4}}</input><br/>
+    </ol>
+    {{/each}}
+	</script>
+	
 
-	<button id="videoButton" onclick="getCurTime()">当前播放位置</button>
-	<button id="videoButton" onclick="setCurTime()">从5秒开始播放</button>
-	<button id="videoButton" onclick="setPause()">暂停</button>
-	<button id="videoButton" onclick="setPlay()">开始</button>
-	<button id="videoButton" onclick="setPlaySpeed()">设置播放速度</button>-->
+
 	<script src="../../assest/js/jquery.js"></script>
 	<script src="../../assest/js/jquery-migrate-1.0.0.min.js"></script>
 	<script src="../../assest/js/jquery-ui-1.10.0.custom.min.js"></script>
@@ -82,6 +88,7 @@
 	<script src="../../assest/js/jquery.sparkline.min.js"></script>
 	<script src="../../assest/js/counter.js"></script>
 	<script src="../../assest/js/retina.js"></script>
+
 	<!-- jquery file upload相关js -->
 	<script src="../../assest/js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 	<script src="../../assest/js/jquery-fileupload/jquery.iframe-transport.js"></script>
@@ -89,10 +96,14 @@
 	<script src="../../assest/js/jquery-fileupload/cors/jquery.xdr-transport.js"></script>
 	<script src="../../assest/js/jquery-fileupload/jquery.fileupload-process.js"></script>
 	<script src="../../assest/js/jquery-fileupload/jquery.fileupload-validate.js"></script>
+
+
+
+	
 	<script type="text/javascript" src="../../assest/bootstrap/qiao.js"></script>
 	<script type="text/javascript" src="../../js/util/main.js"></script>
 	<script type="text/javascript" src="../../js/util/handlebars-v4.0.5.js"></script>
-	<script type="text/javascript" src="../../js/course/coursePlayer.js"></script>
+	<script type="text/javascript" src="../../js/course/test.js"></script>
 </body>
 
 
