--- a/src/main/webapp/html/course/coursePlayer.html
+++ b/src/main/webapp/html/course/coursePlayer.html
@@ -35,14 +35,16 @@
 <title>上传视频结果</title>
 <style>
 	.courseName {
-		font-size: 30px;
-		font-weight: 700;
+		font-size: 20px;
+    	font-weight: 600;
+    	color: slategrey;
 	}
 	.introduce {
-		font-size: 20px;
-		padding: 0 255px;
-		line-height: 40px;
-    	text-indent: 40px;
+		font-size: 12px;
+    	padding: 12px;
+    	line-height: 15px;
+    	text-indent: 0px;
+    	color: #999;
 	}
 </style>
 </head>
@@ -56,6 +58,7 @@
 	<div>
 		<br /> <br />
 		<!-- 视频播放显示区域 -->
+		<div id="introduce" class="introduce"></div>
 		<div class="">
 			<div class="container">
 				<div class="jumbotron">
@@ -65,7 +68,7 @@
 				</div>
 			</div>
 		</div>
-	<div id="introduce" class="introduce"></div>
+	
 	</div>
 	<!--<div id="current">当前时长：0:00</div>
 	<div id="duration">总时长：0:00</div>
