--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -86,7 +86,7 @@
                     <li>
                         <a href="#"><i class="fa fa-flask"></i> <span class="nav-label">课程计划</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="toastr_notifications.html">已完成课程</a>
+                            <li><a class="J_menuItem" href="../course/courseFinish.html">已完成课程</a>
                             </li>
                             <li><a class="J_menuItem" href="../course/coursePlay.html">未完成课程</a>
                             </li>
