--- a/src/main/webapp/html/course/test.html
+++ b/src/main/webapp/html/course/test.html
@@ -71,7 +71,7 @@
 	<br/>
 	<script id="testId" type="text/x-handlebars-template"> 
     {{#each rows}}
-     <ol>
+     <ol name="test" id="{{id}}">
          <hr id="{{id}}">{{number}}、{{include}}</hr><br/>
         <input type="radio" name="{{id}}" value="{{option1}}"> A: {{option1}}</input><br/>
         <input type="radio" name="{{id}}" value="{{option2}}"> B: {{option2}}</input><br/>
